[package]
name = "tldw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.7.1"
reqwest = { version = "0.11.14", features = ["serde_json", "json"] }
serde = { version = "1.0.157", features = ["serde_derive"] }
serde_json = "1.0.94"
tokio = { version = "1.26.0", features = ["io-std", "io-util", "fs", "rt", "macros", "process", "rt-multi-thread"] }
